carts/zenc/null0.h

typedef int32_t i32;
typedef uint8_t u8;
typedef uint32_t u32;
typedef uint64_t u64;
typedef float f32;
typedef struct {
  u32 width;
  u32 height;
} Dimensions;
typedef struct {
  i32 x;
  i32 y;
} Vector;
typedef struct {
  i32 x;
  i32 y;
  i32 width;
  i32 height;
} Rectangle;
typedef struct {
  u8 r;
  u8 g;
  u8 b;
  u8 a;
} Color;
typedef struct SfxParams {
  uint32_t randSeed;
  int waveType;
  float attackTime;
  float sustainTime;
  float sustainPunch;
  float decayTime;
  float startFrequency;
  float minFrequency;
  float slide;
  float deltaSlide;
  float vibratoDepth;
  float vibratoSpeed;
  float changeAmount;
  float changeSpeed;
  float squareDuty;
  float dutySweep;
  float repeatSpeed;
  float phaserOffset;
  float phaserSweep;
  float lpfCutoff;
  float lpfCutoffSweep;
  float lpfResonance;
  float hpfCutoff;
  float hpfCutoffSweep;
} SfxParams;
typedef enum SfxPresetType {
  SFX_COIN,
  SFX_LASER,
  SFX_EXPLOSION,
  SFX_POWERUP,
  SFX_HURT,
  SFX_JUMP,
  SFX_SELECT,
  SFX_SYNTH
} SfxPresetType;
typedef enum Key {
  KEY_INVALID = 0,
  KEY_SPACE = 32,
  KEY_APOSTROPHE = 39,
  KEY_COMMA = 44,
  KEY_MINUS = 45,
  KEY_PERIOD = 46,
  KEY_SLASH = 47,
  KEY_0 = 48,
  KEY_1 = 49,
  KEY_2 = 50,
  KEY_3 = 51,
  KEY_4 = 52,
  KEY_5 = 53,
  KEY_6 = 54,
  KEY_7 = 55,
  KEY_8 = 56,
  KEY_9 = 57,
  KEY_SEMICOLON = 59,
  KEY_EQUAL = 61,
  KEY_A = 65,
  KEY_B = 66,
  KEY_C = 67,
  KEY_D = 68,
  KEY_E = 69,
  KEY_F = 70,
  KEY_G = 71,
  KEY_H = 72,
  KEY_I = 73,
  KEY_J = 74,
  KEY_K = 75,
  KEY_L = 76,
  KEY_M = 77,
  KEY_N = 78,
  KEY_O = 79,
  KEY_P = 80,
  KEY_Q = 81,
  KEY_R = 82,
  KEY_S = 83,
  KEY_T = 84,
  KEY_U = 85,
  KEY_V = 86,
  KEY_W = 87,
  KEY_X = 88,
  KEY_Y = 89,
  KEY_Z = 90,
  KEY_LEFT_BRACKET = 91,
  KEY_BACKSLASH = 92,
  KEY_RIGHT_BRACKET = 93,
  KEY_GRAVE_ACCENT = 96,
  KEY_WORLD_1 = 161,
  KEY_WORLD_2 = 162,
  KEY_ESCAPE = 256,
  KEY_ENTER = 257,
  KEY_TAB = 258,
  KEY_BACKSPACE = 259,
  KEY_INSERT = 260,
  KEY_DELETE = 261,
  KEY_RIGHT = 262,
  KEY_LEFT = 263,
  KEY_DOWN = 264,
  KEY_UP = 265,
  KEY_PAGE_UP = 266,
  KEY_PAGE_DOWN = 267,
  KEY_HOME = 268,
  KEY_END = 269,
  KEY_CAPS_LOCK = 280,
  KEY_SCROLL_LOCK = 281,
  KEY_NUM_LOCK = 282,
  KEY_PRINT_SCREEN = 283,
  KEY_PAUSE = 284,
  KEY_F1 = 290,
  KEY_F2 = 291,
  KEY_F3 = 292,
  KEY_F4 = 293,
  KEY_F5 = 294,
  KEY_F6 = 295,
  KEY_F7 = 296,
  KEY_F8 = 297,
  KEY_F9 = 298,
  KEY_F10 = 299,
  KEY_F11 = 300,
  KEY_F12 = 301,
  KEY_F13 = 302,
  KEY_F14 = 303,
  KEY_F15 = 304,
  KEY_F16 = 305,
  KEY_F17 = 306,
  KEY_F18 = 307,
  KEY_F19 = 308,
  KEY_F20 = 309,
  KEY_F21 = 310,
  KEY_F22 = 311,
  KEY_F23 = 312,
  KEY_F24 = 313,
  KEY_F25 = 314,
  KEY_KP_0 = 320,
  KEY_KP_1 = 321,
  KEY_KP_2 = 322,
  KEY_KP_3 = 323,
  KEY_KP_4 = 324,
  KEY_KP_5 = 325,
  KEY_KP_6 = 326,
  KEY_KP_7 = 327,
  KEY_KP_8 = 328,
  KEY_KP_9 = 329,
  KEY_KP_DECIMAL = 330,
  KEY_KP_DIVIDE = 331,
  KEY_KP_MULTIPLY = 332,
  KEY_KP_SUBTRACT = 333,
  KEY_KP_ADD = 334,
  KEY_KP_ENTER = 335,
  KEY_KP_EQUAL = 336,
  KEY_LEFT_SHIFT = 340,
  KEY_LEFT_CONTROL = 341,
  KEY_LEFT_ALT = 342,
  KEY_LEFT_SUPER = 343,
  KEY_RIGHT_SHIFT = 344,
  KEY_RIGHT_CONTROL = 345,
  KEY_RIGHT_ALT = 346,
  KEY_RIGHT_SUPER = 347,
  KEY_MENU = 348,
} Key;
typedef enum GamepadButton {
  GAMEPAD_BUTTON_UNKNOWN = 0,    
  GAMEPAD_BUTTON_UP = 1,         
  GAMEPAD_BUTTON_RIGHT,          
  GAMEPAD_BUTTON_DOWN,           
  GAMEPAD_BUTTON_LEFT,           
  GAMEPAD_BUTTON_Y,              
  GAMEPAD_BUTTON_B,              
  GAMEPAD_BUTTON_A,              
  GAMEPAD_BUTTON_X,              
  GAMEPAD_BUTTON_LEFT_SHOULDER,  
  GAMEPAD_BUTTON_LEFT_TRIGGER,   
  GAMEPAD_BUTTON_RIGHT_SHOULDER, 
  GAMEPAD_BUTTON_RIGHT_TRIGGER,  
  GAMEPAD_BUTTON_SELECT,         
  GAMEPAD_BUTTON_MENU,           
  GAMEPAD_BUTTON_START,          
  GAMEPAD_BUTTON_LEFT_THUMB,     
  GAMEPAD_BUTTON_RIGHT_THUMB,    
} GamepadButton;
typedef enum MouseButton {
  MOUSE_BUTTON_UNKNOWN = 0,
  MOUSE_BUTTON_LEFT = 1,
  MOUSE_BUTTON_RIGHT = 2,
  MOUSE_BUTTON_MIDDLE = 3,
} MouseButton;
typedef enum TileLayerKind {
  LAYER_NONE = 0,
  LAYER_TILE = 1,
  LAYER_OBJECT = 2,
  LAYER_IMAGE = 3,
  LAYER_GROUP = 4,
} TileLayerKind;
typedef enum TilePropType {
  PROP_NONE = 0,
  PROP_INT = 1,
  PROP_BOOL = 2,
  PROP_FLOAT = 3,
  PROP_STRING = 4,
  PROP_COLOR = 5,
} TilePropType;
typedef struct {
  char* name;
  TilePropType type;
  i32 integer;
  f32 number;
  char* text;
} TilemapProp;
typedef struct {
  i32 id;
  char* name;
  char* type;
  i32 gid;
  f32 x;
  f32 y;
  f32 width;
  f32 height;
  f32 rotation;
  i32 visible;
} TilemapObject;
NULL0_EXPORT("update")
void update();
NULL0_IMPORT("gui_begin_window")
extern bool gui_begin_window(char* title, Rectangle rect);
NULL0_IMPORT("gui_end_window")
extern void gui_end_window();
NULL0_IMPORT("gui_button")
extern bool gui_button(char* label);
NULL0_IMPORT("gui_label")
extern void gui_label(char* text);
NULL0_IMPORT("gui_text")
extern void gui_text(char* text);
NULL0_IMPORT("gui_checkbox")
extern bool gui_checkbox(char* label, bool state);
NULL0_IMPORT("gui_slider")
extern f32 gui_slider(f32 value, f32 low, f32 high);
NULL0_IMPORT("gui_layout_row")
extern void gui_layout_row(i32* widths, i32 numWidths, i32 height);
NULL0_IMPORT("gui_end")
extern void gui_end();
NULL0_IMPORT("gui_draw")
extern void gui_draw(u32 dst);
NULL0_IMPORT("key_pressed")
extern bool key_pressed(Key key);
NULL0_IMPORT("key_down")
extern bool key_down(Key key);
NULL0_IMPORT("key_released")
extern bool key_released(Key key);
NULL0_IMPORT("key_up")
extern bool key_up(Key key);
NULL0_IMPORT("gamepad_button_pressed")
extern bool gamepad_button_pressed(i32 gamepad, GamepadButton button);
NULL0_IMPORT("gamepad_button_down")
extern bool gamepad_button_down(i32 gamepad, GamepadButton button);
NULL0_IMPORT("gamepad_button_released")
extern bool gamepad_button_released(i32 gamepad, GamepadButton button);
NULL0_IMPORT("mouse_position")
extern Vector* mouse_position();
NULL0_IMPORT("mouse_button_pressed")
extern bool mouse_button_pressed(MouseButton button);
NULL0_IMPORT("mouse_button_down")
extern bool mouse_button_down(MouseButton button);
NULL0_IMPORT("mouse_button_released")
extern bool mouse_button_released(MouseButton button);
NULL0_IMPORT("mouse_button_up")
extern bool mouse_button_up(MouseButton button);
NULL0_IMPORT("load_sound")
extern u32 load_sound(char* filename);
NULL0_IMPORT("play_sound")
extern void play_sound(u32 sound, bool loop);
NULL0_IMPORT("stop_sound")
extern void stop_sound(u32 sound);
NULL0_IMPORT("unload_sound")
extern void unload_sound(u32 sound);
NULL0_IMPORT("tts_sound")
extern u32 tts_sound(char* text, bool phonetic, i32 pitch, i32 speed, i32 throat, i32 mouth, bool sing);
NULL0_IMPORT("sfx_sound")
extern u32 sfx_sound(SfxParams params);
NULL0_IMPORT("sfx_generate")
extern SfxParams* sfx_generate(SfxPresetType type);
NULL0_IMPORT("load_tilemap")
extern u32 load_tilemap(char* filename);
NULL0_IMPORT("unload_tilemap")
extern void unload_tilemap(u32 tilemap);
NULL0_IMPORT("tile_update")
extern void tile_update(u32 tilemap, f32 deltaTime);
NULL0_IMPORT("tile_map_size")
extern Dimensions* tile_map_size(u32 tilemap);
NULL0_IMPORT("tile_tile_size")
extern Dimensions* tile_tile_size(u32 tilemap);
NULL0_IMPORT("tile_map_prop")
extern TilemapProp* tile_map_prop(u32 tilemap, char* name);
NULL0_IMPORT("tile_map_prop_count")
extern i32 tile_map_prop_count(u32 tilemap);
NULL0_IMPORT("tile_map_prop_at")
extern TilemapProp* tile_map_prop_at(u32 tilemap, i32 index);
NULL0_IMPORT("tile_draw")
extern void tile_draw(u32 tilemap, i32 posX, i32 posY);
NULL0_IMPORT("tile_draw_tint")
extern void tile_draw_tint(u32 tilemap, i32 posX, i32 posY, Color tint);
NULL0_IMPORT("tile_draw_on_image")
extern void tile_draw_on_image(u32 dst, u32 tilemap, i32 posX, i32 posY);
NULL0_IMPORT("tilemap_image")
extern u32 tilemap_image(u32 tilemap);
NULL0_IMPORT("tile_layer_count")
extern i32 tile_layer_count(u32 tilemap);
NULL0_IMPORT("tile_layer_index")
extern i32 tile_layer_index(u32 tilemap, char* name);
NULL0_IMPORT("tile_layer_name")
extern char* tile_layer_name(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_layer_type")
extern TileLayerKind tile_layer_type(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_layer_size")
extern Dimensions* tile_layer_size(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_layer_visible")
extern bool tile_layer_visible(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_layer_prop")
extern TilemapProp* tile_layer_prop(u32 tilemap, i32 layer, char* name);
NULL0_IMPORT("tile_layer_prop_count")
extern i32 tile_layer_prop_count(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_layer_prop_at")
extern TilemapProp* tile_layer_prop_at(u32 tilemap, i32 layer, i32 index);
NULL0_IMPORT("tile_draw_layer")
extern void tile_draw_layer(u32 tilemap, i32 layer, i32 posX, i32 posY);
NULL0_IMPORT("tile_draw_layer_tint")
extern void tile_draw_layer_tint(u32 tilemap, i32 layer, i32 posX, i32 posY, Color tint);
NULL0_IMPORT("tile_draw_layer_on_image")
extern void tile_draw_layer_on_image(u32 dst, u32 tilemap, i32 layer, i32 posX, i32 posY);
NULL0_IMPORT("tile_layer_image")
extern u32 tile_layer_image(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_get_tile")
extern i32 tile_get_tile(u32 tilemap, i32 layer, i32 column, i32 row);
NULL0_IMPORT("tile_set_tile")
extern void tile_set_tile(u32 tilemap, i32 layer, i32 column, i32 row, i32 gid);
NULL0_IMPORT("tile_draw_tile")
extern void tile_draw_tile(u32 tilemap, i32 gid, i32 posX, i32 posY);
NULL0_IMPORT("tile_image")
extern u32 tile_image(u32 tilemap, i32 gid);
NULL0_IMPORT("tile_gid_prop")
extern TilemapProp* tile_gid_prop(u32 tilemap, i32 gid, char* name);
NULL0_IMPORT("tile_gid_prop_count")
extern i32 tile_gid_prop_count(u32 tilemap, i32 gid);
NULL0_IMPORT("tile_gid_prop_at")
extern TilemapProp* tile_gid_prop_at(u32 tilemap, i32 gid, i32 index);
NULL0_IMPORT("tile_object_count")
extern i32 tile_object_count(u32 tilemap, i32 layer);
NULL0_IMPORT("tile_object")
extern TilemapObject* tile_object(u32 tilemap, i32 layer, i32 index);
NULL0_IMPORT("tile_object_index")
extern i32 tile_object_index(u32 tilemap, i32 layer, char* name);
NULL0_IMPORT("tile_object_prop")
extern TilemapProp* tile_object_prop(u32 tilemap, i32 layer, i32 index, char* name);
NULL0_IMPORT("tile_object_prop_count")
extern i32 tile_object_prop_count(u32 tilemap, i32 layer, i32 index);
NULL0_IMPORT("tile_object_prop_at")
extern TilemapProp* tile_object_prop_at(u32 tilemap, i32 layer, i32 index, i32 propIndex);
NULL0_IMPORT("current_time")
extern u64 current_time();
NULL0_IMPORT("delta_time")
extern f32 delta_time();
NULL0_IMPORT("random_int")
extern i32 random_int(i32 min, i32 max);
NULL0_IMPORT("random_seed_get")
extern u64 random_seed_get();
NULL0_IMPORT("random_seed_set")
extern void random_seed_set(u64 seed);