carts/odin/null0/null0.odin


    // GUI
    // Begin a GUI window. Returns false if the window is collapsed or closed - skip its contents, but still call gui_end_window.
    gui_begin_window :: proc(title: cstring, rect: Rectangle) -> bool ---
    // End the current GUI window.
    gui_end_window :: proc() ---
    // A button. Returns true when it is clicked.
    gui_button :: proc(label: cstring) -> bool ---
    // A static text label.
    gui_label :: proc(text: cstring) ---
    // A block of wrapping text.
    gui_text :: proc(text: cstring) ---
    // A checkbox. Returns the (possibly changed) state.
    gui_checkbox :: proc(label: cstring, state: bool) -> bool ---
    // A slider. Returns the (possibly changed) value.
    gui_slider :: proc(value: f32, low: f32, high: f32) -> f32 ---
    // Set the current layout row - the column widths (negative for flexible), and the row height.
    gui_layout_row :: proc(widths: [^]i32, numWidths: i32, height: i32) ---
    // Finish building the GUI for this frame. Called automatically at the end of update if you do not call it.
    gui_end :: proc() ---
    // Draw the GUI to an image (0 is the screen).
    gui_draw :: proc(dst: Image) ---

    // INPUT
    // Has the key been pressed? (tracks unpress/read correctly.)
    key_pressed :: proc(key: Key) -> bool ---
    // Is the key currently down?
    key_down :: proc(key: Key) -> bool ---
    // Has the key been released? (tracks press/read correctly.)
    key_released :: proc(key: Key) -> bool ---
    // Is the key currently up?
    key_up :: proc(key: Key) -> bool ---
    // Has the button been pressed? (tracks unpress/read correctly.)
    gamepad_button_pressed :: proc(gamepad: i32, button: GamepadButton) -> bool ---
    // Is the button currently down?
    gamepad_button_down :: proc(gamepad: i32, button: GamepadButton) -> bool ---
    // Has the button been released? (tracks press/read correctly.)
    gamepad_button_released :: proc(gamepad: i32, button: GamepadButton) -> bool ---
    // Get current position of mouse.
    mouse_position :: proc() -> ^Vector ---
    // Has the button been pressed? (tracks unpress/read correctly.)
    mouse_button_pressed :: proc(button: MouseButton) -> bool ---
    // Is the button currently down?
    mouse_button_down :: proc(button: MouseButton) -> bool ---
    // Has the button been released? (tracks press/read correctly.)
    mouse_button_released :: proc(button: MouseButton) -> bool ---
    // Is the button currently up?
    mouse_button_up :: proc(button: MouseButton) -> bool ---

    // SOUND
    // Load a sound from a file in cart.
    load_sound :: proc(filename: cstring) -> Sound ---
    // Play a sound.
    play_sound :: proc(sound: Sound, loop: bool) ---
    // Stop a sound.
    stop_sound :: proc(sound: Sound) ---
    // Unload a sound.
    unload_sound :: proc(sound: Sound) ---
    // Speak some text and return a sound. Set things to 0 for defaults.
    tts_sound :: proc(text: cstring, phonetic: bool, pitch: i32, speed: i32, throat: i32, mouth: i32, sing: bool) -> Sound ---
    // Create Sfx sound.
    sfx_sound :: proc(params: ^SfxParams) -> Sound ---
    // Create Sfx parameters.
    sfx_generate :: proc(type: SfxPresetType) -> ^SfxParams ---

    // TILE
    // Load a tilemap (a Tiled map, exported as JSON) from a file in cart.
    load_tilemap :: proc(filename: cstring) -> Tilemap ---
    // Unload a tilemap.
    unload_tilemap :: proc(tilemap: Tilemap) ---
    // Update a tilemap's animation timers (deltaTime is in seconds).
    tile_update :: proc(tilemap: Tilemap, deltaTime: f32) ---
    // Get the size of a tilemap, in tiles.
    tile_map_size :: proc(tilemap: Tilemap) -> ^Dimensions ---
    // Get the size of a single tile of a tilemap, in pixels.
    tile_tile_size :: proc(tilemap: Tilemap) -> ^Dimensions ---
    // Get a custom property of a tilemap, by name (PROP_NONE when there is no such property.)
    tile_map_prop :: proc(tilemap: Tilemap, name: cstring) -> ^TilemapProp ---
    // Get the number of custom properties on a tilemap.
    tile_map_prop_count :: proc(tilemap: Tilemap) -> i32 ---
    // Get a custom property of a tilemap, by index (PROP_NONE when out of range.)
    tile_map_prop_at :: proc(tilemap: Tilemap, index: i32) -> ^TilemapProp ---
    // Draw a tilemap on the screen.
    tile_draw :: proc(tilemap: Tilemap, posX: i32, posY: i32) ---
    // Draw a tilemap on the screen, tinted by a color.
    tile_draw_tint :: proc(tilemap: Tilemap, posX: i32, posY: i32, tint: Color) ---
    // Draw a tilemap on an image.
    tile_draw_on_image :: proc(dst: Image, tilemap: Tilemap, posX: i32, posY: i32) ---
    // Render a whole tilemap to a new image.
    tilemap_image :: proc(tilemap: Tilemap) -> Image ---
    // Get the number of layers in a tilemap. Layers are numbered depth-first, so the children of a group layer have their own indexes too.
    tile_layer_count :: proc(tilemap: Tilemap) -> i32 ---
    // Get the index of a layer of a tilemap, by name (-1 when there is no such layer.)
    tile_layer_index :: proc(tilemap: Tilemap, name: cstring) -> i32 ---
    // Get the name of a layer of a tilemap.
    tile_layer_name :: proc(tilemap: Tilemap, layer: i32) -> cstring ---
    // Get the kind of a layer of a tilemap.
    tile_layer_type :: proc(tilemap: Tilemap, layer: i32) ---
    // Get the size of a layer of a tilemap, in tiles.
    tile_layer_size :: proc(tilemap: Tilemap, layer: i32) -> ^Dimensions ---
    // Get whether a layer of a tilemap is visible. Drawing a layer that Tiled marked hidden draws nothing.
    tile_layer_visible :: proc(tilemap: Tilemap, layer: i32) -> bool ---
    // Get a custom property of a layer of a tilemap, by name (PROP_NONE when there is no such property.)
    tile_layer_prop :: proc(tilemap: Tilemap, layer: i32, name: cstring) -> ^TilemapProp ---
    // Get the number of custom properties on a layer of a tilemap.
    tile_layer_prop_count :: proc(tilemap: Tilemap, layer: i32) -> i32 ---
    // Get a custom property of a layer of a tilemap, by index (PROP_NONE when out of range.)
    tile_layer_prop_at :: proc(tilemap: Tilemap, layer: i32, index: i32) -> ^TilemapProp ---
    // Draw a single layer of a tilemap on the screen.
    tile_draw_layer :: proc(tilemap: Tilemap, layer: i32, posX: i32, posY: i32) ---
    // Draw a single layer of a tilemap on the screen, tinted by a color.
    tile_draw_layer_tint :: proc(tilemap: Tilemap, layer: i32, posX: i32, posY: i32, tint: Color) ---
    // Draw a single layer of a tilemap on an image.
    tile_draw_layer_on_image :: proc(dst: Image, tilemap: Tilemap, layer: i32, posX: i32, posY: i32) ---
    // Render a single layer of a tilemap to a new image.
    tile_layer_image :: proc(tilemap: Tilemap, layer: i32) -> Image ---
    // Get the gid of the tile at a column/row in a tilemap layer.
    tile_get_tile :: proc(tilemap: Tilemap, layer: i32, column: i32, row: i32) -> i32 ---
    // Set the gid of the tile at a column/row in a tilemap layer. Swapping a gid is how a cart keeps changing state in the map itself.
    tile_set_tile :: proc(tilemap: Tilemap, layer: i32, column: i32, row: i32, gid: i32) ---
    // Draw a single tile from a tilemap on the screen.
    tile_draw_tile :: proc(tilemap: Tilemap, gid: i32, posX: i32, posY: i32) ---
    // Get a copy of the image of a single tile in a tilemap.
    tile_image :: proc(tilemap: Tilemap, gid: i32) -> Image ---
    // Get a custom property of a tile of a tilemap, by name (PROP_NONE when there is no such property.) These come from the tileset, so every tile with this gid shares them.
    tile_gid_prop :: proc(tilemap: Tilemap, gid: i32, name: cstring) -> ^TilemapProp ---
    // Get the number of custom properties on a tile of a tilemap.
    tile_gid_prop_count :: proc(tilemap: Tilemap, gid: i32) -> i32 ---
    // Get a custom property of a tile of a tilemap, by index (PROP_NONE when out of range.)
    tile_gid_prop_at :: proc(tilemap: Tilemap, gid: i32, index: i32) -> ^TilemapProp ---
    // Get the number of objects on an object-layer of a tilemap.
    tile_object_count :: proc(tilemap: Tilemap, layer: i32) -> i32 ---
    // Get an object from an object-layer of a tilemap.
    tile_object :: proc(tilemap: Tilemap, layer: i32, index: i32) -> ^TilemapObject ---
    // Get the index of an object on an object-layer of a tilemap, by name (-1 when there is no such object.)
    tile_object_index :: proc(tilemap: Tilemap, layer: i32, name: cstring) -> i32 ---
    // Get a custom property of an object of a tilemap, by name (PROP_NONE when there is no such property.)
    tile_object_prop :: proc(tilemap: Tilemap, layer: i32, index: i32, name: cstring) -> ^TilemapProp ---
    // Get the number of custom properties on an object of a tilemap.
    tile_object_prop_count :: proc(tilemap: Tilemap, layer: i32, index: i32) -> i32 ---
    // Get a custom property of an object of a tilemap, by index (PROP_NONE when out of range.)
    tile_object_prop_at :: proc(tilemap: Tilemap, layer: i32, index: i32, propIndex: i32) -> ^TilemapProp ---

    // TYPES

    // UTILITIES
    // Get system-time (ms) since unix epoch.
    current_time :: proc() -> u64 ---
    // Get the change in time (seconds) since the last update run.
    delta_time :: proc() -> f32 ---
    // Get a random integer between 2 numbers.
    random_int :: proc(min: i32, max: i32) -> i32 ---
    // Get the random-seed.
    random_seed_get :: proc() -> u64 ---
    // Set the random-seed.
    random_seed_set :: proc(seed: u64) ---
}
